--- a/eam/view/view-eam/src/main/resources/public/business/eam/stock/stock_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/stock/stock_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产库存 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-11-22 10:47:20
+ * @since 2021-11-22 13:52:32
  */
  -->
  <!DOCTYPE html>
@@ -37,27 +37,92 @@
         <div class="layui-row form-row">
 
              <!--开始：group 循环-->
-            <div class="layui-col-xs6 form-column">
+            <div class="layui-col-xs4 form-column">
 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('库存名称')}">库存名称</div><div class="layui-required">*</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('单据名称')}">单据名称</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="stockName" id="stockName" name="stockName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('库存名称') }" type="text" class="layui-input"    lay-verify="|required"  />
+                            <input lay-filter="stockName" id="stockName" name="stockName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('单据名称') }" type="text" class="layui-input"    lay-verify="|required"  />
+                        </div>
+                    </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('批次号')}">批次号</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="stockBatchCode" id="stockBatchCode" name="stockBatchCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('批次号') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('接收人')}">接收人</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="receiverUserName" id="receiverUserName" name="receiverUserName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('接收人') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
                 <!--结束：栏次内字段循环-->
             </div>
              <!--开始：group 循环-->
-            <div class="layui-col-xs6 form-column">
+            <div class="layui-col-xs4 form-column">
 
 
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('业务时间')}">业务时间</div></div>
+
+                <div class="layui-form-item" >
+                    <div class="layui-form-label "><div th:text="${lang.translate('来源')}">来源</div><div class="layui-required">*</div></div>
+                    <div class="layui-input-block ">
+                        <div id="sourceId" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_source'}" extraParam="{}"></div>
+                    </div>
+                </div>
+
+
+                <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('供应商')}">供应商</div></div>
                         <div class="layui-input-block ">
-                            <input input-type="date" lay-filter="businessDate" id="businessDate" name="businessDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('业务时间') }" type="text" class="layui-input"    lay-verify=""   />
+                            <div id="supplierId" input-type="select" th:data="${'/service-eam/eam-supplier/query-list'}" extraParam="{}"></div>
                         </div>
                     </div>
+
+
+
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('仓库')}">仓库</div></div>
+                        <div class="layui-input-block ">
+                            <div id="warehouseId" input-type="select" th:data="${'/service-eam/eam-warehouse/query-list'}" extraParam="{}"></div>
+                        </div>
+                    </div>
+
+
+                <!--结束：栏次内字段循环-->
+            </div>
+             <!--开始：group 循环-->
+            <div class="layui-col-xs4 form-column">
+
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('所属公司')}">所属公司</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="ownCompanyId" id="ownCompanyId" name="ownCompanyId"  type="hidden" class="layui-input"   />
+                            <button id="ownCompanyId-button" type="button" action-type="org-dialog" class="layui-btn   " style="width: 100%"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择公司')}" th:default-label="${lang.translate('请选择公司')}">按钮文本</span></button>
+                        </div>
+                    </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('管理人')}">管理人</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="managerId" id="managerId" name="managerId"  type="hidden" class="layui-input"   />
+                            <button id="managerId-button" type="button" action-type="emp-dialog" class="layui-btn   " style="width: 100%"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择人员')}" th:default-label="${lang.translate('请选择人员')}">按钮文本</span></button>
+                        </div>
+                    </div>
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('总金额')}">总金额</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="amount" id="amount" name="amount" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('总金额') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="false" step="1.0"   scale="2" />
+                        </div>
+                    </div>
+
 
                 <!--结束：栏次内字段循环-->
             </div>
@@ -70,7 +135,7 @@
         <div class="layui-row form-row">
 
              <!--开始：group 循环-->
-            <div class="layui-col-xs12 form-column">
+            <div class="layui-col-xs6 form-column">
 
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('备注')}">备注</div></div>
@@ -78,6 +143,23 @@
                             <input lay-filter="stockNotes" id="stockNotes" name="stockNotes" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('备注') }" type="text" class="layui-input"  />
                         </div>
                     </div>
+
+                <!--结束：栏次内字段循环-->
+            </div>
+             <!--开始：group 循环-->
+            <div class="layui-col-xs6 form-column">
+
+
+                <div class="layui-form-item" >
+                    <div class="layui-form-label "><div th:text="${lang.translate('附件')}">附件</div></div>
+                    <div class="layui-upload layui-input-block ">
+                        <input input-type="upload" id="attachId"  name="attachId" lay-filter="attachId" style="display: none">
+                        <button type="button" class="layui-btn" id="attachId-button" th:text="${lang.translate('选择附件')}">选择附件</button>
+                        <div class="layui-upload-list" id="attachId-file-list"></div>
+                    </div>
+                </div>
+
+
 
                 <!--结束：栏次内字段循环-->
             </div>
@@ -104,7 +186,7 @@
 </div>
 <div class="model-form-footer">
     <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}" >取消</button>
-    <button th:if="${perm.checkAnyAuth('eam_stock:create','eam_stock:update','eam_stock:save')}" class="layui-btn" style="margin-right: 15px;display: none;"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
+    <button class="layui-btn" style="margin-right: 15px;display: none;"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
 </div>
 
 <script type="text/javascript" src="/module/global.js" th:src="'/module/global.js?'+${cacheKey}"></script>
@@ -116,8 +198,8 @@
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
-    var VALIDATE_CONFIG={"businessDate":{"date":true,"labelInForm":"业务时间","inputType":"date_input"},"stockName":{"labelInForm":"库存名称","inputType":"text_input","required":true}};
-    var AUTH_PREFIX="eam_stock";
+    var VALIDATE_CONFIG={"sourceId":{"labelInForm":"来源","inputType":"select_box","required":true},"businessDate":{"date":true,"labelInForm":"业务时间","inputType":"date_input"},"stockName":{"labelInForm":"单据名称","inputType":"text_input","required":true}};
+    var AUTH_PREFIX= [[${authPrefix}]];
 
     // 单据ID
     var BILL_ID = [[${billId}]] ;
