--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_repair/asset_repair_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_repair/asset_repair_form.html
@@ -151,7 +151,7 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_REPAIRSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetRepairStatusEnum')}]];
-    var VALIDATE_CONFIG={"repairStatus":{"labelInForm":"维修状态","inputType":"select_box","required":true},"actualFinishDate":{"date":true,"labelInForm":"实际完成日期","inputType":"date_input"},"name":{"labelInForm":"业务名称","inputType":"text_input","required":true},"planFinishDate":{"date":true,"labelInForm":"计划完成日期","inputType":"date_input"},"content":{"labelInForm":"报修内容","inputType":"text_area","required":true}};
+    var VALIDATE_CONFIG={"actualFinishDate":{"date":true,"labelInForm":"实际完成日期","inputType":"date_input"},"name":{"labelInForm":"业务名称","inputType":"text_input","required":true},"planFinishDate":{"date":true,"labelInForm":"计划完成日期","inputType":"date_input"},"content":{"labelInForm":"报修内容","inputType":"text_area","required":true}};
     var AUTH_PREFIX="eam_asset_repair";
 
     // 单据ID
