--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
@@ -167,14 +167,14 @@
 <!-- 表格工具栏    -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
-        <button th:if="${perm.checkAuth('eam_asset:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button"                                    lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
-        <button th:if="${perm.checkAuth('eam_asset:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button"       lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
-        <button th:if="${perm.checkAuth('eam_asset:for-batch-approval')}"  id="forBatchApproval-button" class="layui-btn icon-btn  layui-btn-sm for-batch-approval-button" lay-event="forBatchApproval"> <span th:text="${lang.translate('送审')}">送审</span></button>
-        <button th:if="${perm.checkAuth('eam_asset:batch-confirm')}"  id="batchConfirm-button" class="layui-btn icon-btn  layui-btn-sm batch-confirm-button"               lay-event="batchConfirm"> <span th:text="${lang.translate('确认')}">确认</span></button>
-        <button th:if="${perm.checkAuth('eam_asset:batch-revoke')}" id="batchRevoke-button" class="layui-btn icon-btn  layui-btn-sm batch-revoke-button"                   lay-event="batchRevoke"> <span th:text="${lang.translate('撤销')}">撤销</span></button>
-        <button th:if="${perm.checkAuth('eam_asset:bills')}" id="bills-button" class="layui-btn icon-btn layui-btn-sm bills-button"                                        lay-event="bills"> <span th:text="${lang.translate('登记单')}">登记单</span></button>
-        <button th:if="${perm.checkAuth('eam_asset:label')}"  id="label-button" class="layui-btn icon-btn layui-btn-sm label-button"                                       lay-event="assetLabel"><span th:text="${lang.translate('资产标签')}">资产标签</span></button>
-        <button th:if="${perm.checkAuth('eam_asset:high-export-data')}"  id="highExportData-button" class="layui-btn icon-btn layui-btn-sm high-export-data-button"        lay-event="highExportData"><span th:text="${lang.translate('数据导出')}">数据导出</span></button>
+        <button th:if="${createBtn}"  id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button"                                    lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button th:if="${deleteByIdsBtn}"  id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button"       lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+        <button th:if="${forBatchApprovalBtn}"   id="forBatchApproval-button" class="layui-btn icon-btn  layui-btn-sm for-batch-approval-button" lay-event="forBatchApproval"> <span th:text="${lang.translate('送审')}">送审</span></button>
+        <button th:if="${batchConfirmBtn}"   id="batchConfirm-button" class="layui-btn icon-btn  layui-btn-sm batch-confirm-button"               lay-event="batchConfirm"> <span th:text="${lang.translate('确认')}">确认</span></button>
+        <button th:if="${batchRevokeBtn}"  id="batchRevoke-button" class="layui-btn icon-btn  layui-btn-sm batch-revoke-button"                   lay-event="batchRevoke"> <span th:text="${lang.translate('撤销')}">撤销</span></button>
+        <button th:if="${cardBtn}"    id="bills-button" class="layui-btn icon-btn layui-btn-sm card-button"                                        lay-event="bills"> <span th:text="${lang.translate('登记单')}">登记单</span></button>
+        <button th:if="${labelBtn}"  id="label-button" class="layui-btn icon-btn layui-btn-sm label-button"                                       lay-event="assetLabel"><span th:text="${lang.translate('资产标签')}">资产标签</span></button>
+        <button th:if="${highExportDataBtn}"   id="highExportData-button" class="layui-btn icon-btn layui-btn-sm high-export-data-button"        lay-event="highExportData"><span th:text="${lang.translate('数据导出')}">数据导出</span></button>
 
     </div>
 </script>
@@ -182,10 +182,10 @@
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
-    <button th:if="${perm.checkAuth('eam_asset:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button"                   lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
-    <button th:if="${perm.checkAnyAuth('eam_asset:update','eam_asset:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button"  lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
-    <button th:if="${perm.checkAuth('eam_asset:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button"                     lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
-    <button th:if="${perm.checkAuth('eam_asset:change-query')}" class="layui-btn layui-btn-xs change-query-button"                              lay-event="asset-data-change" th:text="${lang.translate('变更明细')}" data-id="{{d.id}}">变更明细</button>
+    <button  th:if="${viewFormBtn}"  class="layui-btn layui-btn-primary layui-btn-xs ops-view-button"                   lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+    <button  th:if="${updateBtn}"  class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button"  lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
+    <button th:if="${deleteBtn}"  class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button"                     lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
+    <button th:if="${changeQueryBtn}"  class="layui-btn layui-btn-xs change-query-button"                              lay-event="asset-data-change" th:text="${lang.translate('变更明细')}" data-id="{{d.id}}">变更明细</button>
     <button th:if="${perm.checkAuth('eam_asset:asset-voucher')}" class="layui-btn layui-btn-xs asset-voucher-button"                            lay-event="asset-voucher" th:text="${lang.translate('凭证')}" data-id="{{d.id}}">凭证</button>
 
 
