--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/asset_search.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/asset_search.html
@@ -188,6 +188,7 @@
 
     var AUTH_PREFIX="eam_asset";
 
+    var OWNER_CODE="asset";
     var ATTRIBUTE_LIST_DATA =  [[${attributeListData}]];
 
 </script>
